--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="text" id="message" placeholder="Message">
         <button id="send">Enviar</button>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="chat.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+<script src="./chat.js"></script>
 </body>
 </html>
